version/0.17/_sources/api/ansys/additive/core/server_connection/constants/index.rst.txt





The ``constants.py`` module
===========================

.. py:module:: ansys.additive.core.server_connection.constants


Summary
-------








.. py:currentmodule:: constants
.. tab-set::









    .. tab-item:: Constants

        .. list-table::
          :header-rows: 0
          :widths: auto


          * - :py:attr:`~LOCALHOST`
            - IP address for localhost.


          * - :py:attr:`~PYPIM_PRODUCT_NAME`
            - Product name for the Additive server in a PyPIM environment.


          * - :py:attr:`~DEFAULT_PRODUCT_VERSION`
            - Default Ansys product version to use for the Additive server.


          * - :py:attr:`~ADDITIVE_SERVER_EXE_NAME`
            - Name of the Additive server executable.


          * - :py:attr:`~ADDITIVE_SERVER_SUBDIR`
            - Subdirectory for the Additive server in the Ansys installation directory.















Description
-----------

Constants used for server connections.

..
    !! processed by numpydoc !!






Module detail
-------------

.. py:data:: LOCALHOST
   :value: '127.0.0.1'

   
   IP address for localhost.
















   ..
       !! processed by numpydoc !!

.. py:data:: PYPIM_PRODUCT_NAME
   :value: 'additive'

   
   Product name for the Additive server in a PyPIM environment.
















   ..
       !! processed by numpydoc !!

.. py:data:: DEFAULT_PRODUCT_VERSION
   :value: '241'

   
   Default Ansys product version to use for the Additive server.
















   ..
       !! processed by numpydoc !!

.. py:data:: ADDITIVE_SERVER_EXE_NAME
   :value: 'additiveserver'

   
   Name of the Additive server executable.
















   ..
       !! processed by numpydoc !!

.. py:data:: ADDITIVE_SERVER_SUBDIR

   
   Subdirectory for the Additive server in the Ansys installation directory.
















   ..
       !! processed by numpydoc !!



